--- a/Frontend/src/app/post/post.component.html
+++ b/Frontend/src/app/post/post.component.html
@@ -41,7 +41,7 @@
       </mat-form-field>
       <button mat-button type="button" (click)="addObjektToHaveArray()">Have 가져오기</button>
       <button mat-button type="button" (click)="addObjektToWantArray()">Want 가져오기</button>
-      <button type="button" (click)="resetObjektArray()">Reset</button>
+      <button mat-button type="button" (click)="resetObjektArray()">Reset</button>
     </form>
   </div>
 
