--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -1,18 +1,40 @@
-/* You can add global styles to this file, and also import other style files */
-
-// html, body { height: 100%; }
-// body { margin: 0; font-family: "Noto Sans", sans-serif; }
-
 /* Global Styles */
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Noto Sans KR", sans-serif;
-  background-color: #F9FAFB; // 기본 배경색 설정
-  color: #333; // 기본 텍스트 색상 설정
+  background-color: var(--background-color);
+  color: var(--text-color);
   box-sizing: border-box;
 }
+
+nav, footer {
+  background-color: var(--primary-color);
+  color: var(--text-color);
+}
+
+/* Global Theme Variables */
+:root {
+  /* 라이트 모드 */
+  --background-color: #ffffff;
+  --text-color: #333333;
+  --primary-color: #2E3B55;
+  --secondary-color: #F9FAFB;
+  --accent-color: #FFC107;
+  --error-color: #D32F2F;
+}
+
+.dark-mode {
+  /* 다크 모드 */
+  --background-color: #121212;
+  --text-color: #ffffff;
+  --primary-color: #1F2937;
+  --secondary-color: #2D3748;
+  --accent-color: #FFA726;
+  --error-color: #EF5350;
+}
+
 
 *, *::before, *::after {
   box-sizing: inherit;
@@ -27,12 +49,12 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Link Styles */
 a {
-  color: #2E3B55;
+  color: var(--accent-color);
   text-decoration: none;
   transition: color 0.3s ease;
 
   &:hover {
-    color: #FFC107;
+    color: var(--accent-color);
     text-decoration: underline;
   }
 }
